--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8"></meta>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>BookShelves</title>
-        <link rel="stylesheet" href="index.css" />
-        </head>
-	<body>
+<!doctype html>
+<html class="no-js" lang="en">
+    
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>BookShelves</title>
+        <link rel="stylesheet" href="build/bookshelves.min.css" />
+        <script src="bower_components/modernizr/modernizr.js"></script>
+    </head>
+
+    <body>
+
         <h1>BookShelves</h1>
+
         <p>A mobile first website based on the GoodReads API.</p>
-	</body>
+
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="bower_components/foundation/js/foundation.min.js"></script>
+        <script src="js/app.js"></script>
+    </body>
+    
 </html>
