--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 
     <body>
 
-        <h1>BookShelves</h1>
-
-        <p>A mobile first website based on the GoodReads API.</p>
-
+        <nav class="top-bar" role="navigation">
+            <ul class="title-area">
+                <li class="name">
+                    <h1><a href="#">BookShelves</a></h1>
+                </li>
+            </ul>
+        </nav>
+        
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="bower_components/foundation/js/foundation.min.js"></script>
         <script src="js/app.js"></script>
