- Moved 'Log in with' inside the goodreads button - Added top margin to footer - Added small book logo to footer

--- a/index.html
+++ b/index.html
@@ -10,28 +10,15 @@
     </head>
 
     <body>
-
-<!--
-        <nav class="top-bar" role="navigation">
-            <ul class="title-area">
-                <li class="name">
-                    <h1><a href="#">BookShelves</a></h1>
-                </li>
-            </ul>
-        </nav>
--->
         
         <div class="row">
             <div class="goodreads login small-6 small-centered columns small-block-grid-1 text-center"> 
                 <i class="flaticon-books71 icon-large"></i>
                 <div class="row">
                     <div class="goodreads small-6 small-centered columns small-block-grid-1">
-                        <a href="#" class="center text-center login" role="button">
-<!--                            <img class="gr-icon" src="img/goodreads_icon.png" />-->
+                        <a href="#" class="center text-center login goodreads-text-logo" role="button">
                             Log in with 
-                            <span class="goodreads-text-logo">
-                                <span>good</span><span>reads</span>
-                            </span>
+                            <span>good</span><span>reads</span>
                         </a>
                     </div>
                 </div>
@@ -39,6 +26,7 @@
         </div>
         
         <footer class="text-center">
+            <i class="flaticon-books71"></i>
             Icon made by 
             <a href="http://www.freepik.com" title="Freepik">Freepik</a> 
             from 
