--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <body>
         
         <div class="row">
-            <div class="goodreads login small-6 small-centered columns small-block-grid-1 text-center"> 
-                <i class="flaticon-books71 icon-large"></i>
+            <div class="card goodreads login small-6 small-centered columns small-block-grid-1 text-center"> 
+                <i class="icon flaticon-books71 icon-large"></i>
                 <div class="row">
                     <div class="goodreads small-6 small-centered columns small-block-grid-1">
                         <a href="#" class="center text-center login goodreads-text-logo" role="button">
