Fixed off-centre logo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>BookShelves</title>
+        <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="build/bookshelves.min.css" />
         <script src="bower_components/modernizr/modernizr.js"></script>
     </head>
@@ -12,7 +13,8 @@
     <body>
         
         <div class="row">
-            <div class="card goodreads login small-6 small-centered columns small-block-grid-1 text-center"> 
+            <div class="card goodreads login small-12 medium-6 small-centered columns small-block-grid-1 text-center"> 
+                <h1 class="brand-font">BookShelves</h1>
                 <i class="icon flaticon-books71 icon-large"></i>
                 <div class="row">
                     <div class="goodreads small-6 small-centered columns small-block-grid-1">
